--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@ Tests/**/TestResult*.xml
 /Tests/CK.Env.Tests/UniverseZips/
 /CodeCakeBuilder/MemoryKey.*.txt
 /CK.LogViewer.WebComponent/dist/
+/CK.LogViewer.WebComponent/public/
