--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve"
+    "build": "webpack --mode production",
+    "start": "webpack --watch --mode development"
   },
-  "dependencies": {},
   "devDependencies": {
+    "copy-webpack-plugin": "^8.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
+    "web-components-loader": "^0.1.2",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@webcomponents/custom-elements": "^1.4.3"
   }
 }
