--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^8.0.0",
+    "css-loader": "^5.1.1",
+    "html-loader": "^2.1.2",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
     "web-components-loader": "^0.1.2",
