--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -8,8 +8,12 @@
     "start": "webpack --watch --mode development"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.1",
+    "eslint": "^7.22.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "html-loader": "^2.1.2",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
