--- a/CK.LogViewer.WebComponent/tsconfig.json
+++ b/CK.LogViewer.WebComponent/tsconfig.json
@@ -9,6 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "sourceMap": true
+    "sourceMap": true,
+    "strictNullChecks": true
   }
 }
