--- a/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
+++ b/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
@@ -13,5 +13,9 @@
     <ProjectReference Include="..\CK.LogViewer\CK.LogViewer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 
 </Project>
