Added lucene net.

--- a/CK.LogViewer.WebApp/appsettings.json
+++ b/CK.LogViewer.WebApp/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "Monitoring": {
+    "HandleDotNetLogs": true,
+    "RootLogPath": "Logs",
+    "GrandOutput": { // Configuration by handler (e.g. TextFileConfiguration -> TextFile)
+      "Handlers": {
+        "Console": true,
+        "TextFile": {
+          "Path": "Text"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
