--- a/.editorconfig
+++ b/.editorconfig
@@ -63,3 +63,6 @@ dotnet_style_require_accessibility_modifiers = omit_if_default:silent
 dotnet_diagnostic.CA1034.severity = none
 # Motive: Nested types can be used to design a good API.
 # /Signature-Code .editorconfig
+
+# CA1816: Dispose methods should call SuppressFinalize
+dotnet_diagnostic.CA1816.severity = none
