--- a/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
+++ b/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="14.1.0" />
     <PackageReference Include="CK.Monitoring.Hosting" Version="14.0.0" />
   </ItemGroup>
 
@@ -15,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot" />
   </ItemGroup>
 
 
