It works, except a little bug.

--- a/CK.LogViewer.WebApp/appsettings.json
+++ b/CK.LogViewer.WebApp/appsettings.json
@@ -7,6 +7,10 @@
         "Console": true,
         "TextFile": {
           "Path": "Text"
+        },
+        "BinaryFile": {
+          "UseGzipCompression": true,
+          "Path": "CKMon"
         }
       }
     }
