--- a/LogSampleGenerator/LogSampleGenerator.csproj
+++ b/LogSampleGenerator/LogSampleGenerator.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="14.0.0" />
-    <PackageReference Include="CK.Monitoring" Version="14.0.0" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="14.0.0" />
   </ItemGroup>
   
 </Project>
