--- a/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
+++ b/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="14.1.0" />
     <PackageReference Include="CK.Monitoring.Hosting" Version="14.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
