--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ branches:
     - master
     - develop
 build_script:
+  - dotnet tool restore
   - dotnet run --project CodeCakeBuilder -nointeraction
 test: off
 artifacts:
