--- a/CK.LogViewer.AutoUpdate/CK.LogViewer.AutoUpdate.csproj
+++ b/CK.LogViewer.AutoUpdate/CK.LogViewer.AutoUpdate.csproj
@@ -3,14 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CSemVer" Version="9.1.0" />
