--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -7,6 +7,13 @@
     <IsPackable>False</IsPackable>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <Compile Include="GitReleaseManager.yml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Cake.Npm" Version="0.17.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="3.1.10" />
