Implemented cache busting on new version.

--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ck.logviewer.webcomponent",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0-0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,18 +12,19 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "@webcomponents/custom-elements": "^1.5.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-loader": "^2.1.2",
+    "replace-in-file-webpack-plugin": "^1.0.6",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
     "web-components-loader": "^0.1.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0",
-    "@webcomponents/custom-elements": "^1.5.0"
+    "webpack-dev-server": "^4.2.0"
   },
   "dependencies": {
     "ts-toolbelt": "^9.6.0"
