--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Cake.Npm" Version="0.17.0" />
+    <PackageReference Include="Cake.WebDeploy" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="3.1.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NuGet.Credentials" Version="5.9.1" />
