--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -15,8 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="Cake.Npm" Version="0.17.0" />
-    <PackageReference Include="Cake.WebDeploy" Version="0.3.4" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="3.1.10" />
+    <PackageReference Include="Microsoft.Web.Deployment" Version="4.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NuGet.Credentials" Version="5.9.1" />
     <PackageReference Include="NuGet.Protocol" Version="5.9.1" />
