--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="NuGet.Protocol" Version="5.9.1" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.12.0" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
     <PackageReference Include="SimpleGitVersion.Cake" Version="5.1.1" />
     <PackageReference Include="CKSetup.Cake" Version="14.2.0" />
   </ItemGroup>
