--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -20,7 +20,10 @@
     <PackageReference Include="Octokit" Version="0.50.0" />
     <PackageReference Include="SimpleGitVersion.Cake" Version="5.1.1" />
     <PackageReference Include="CKSetup.Cake" Version="14.2.0" />
+
+    <!--THIS IS AN ATROCITY TO MAKE A .NET FRAMEWORK LIB WORKING.-->
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="System.Configuration.Install" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
