--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -11,7 +11,6 @@
   <ItemGroup>
     <PackageReference Include="Cake.Npm" Version="0.17.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="3.1.10" />
-    <PackageReference Include="Microsoft.Web.Deployment" Version="4.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NuGet.Credentials" Version="5.9.1" />
     <PackageReference Include="NuGet.Protocol" Version="5.9.1" />
@@ -22,8 +21,10 @@
     <PackageReference Include="CKSetup.Cake" Version="14.2.0" />
 
     <!--THIS IS AN ATROCITY TO MAKE A .NET FRAMEWORK LIB WORKING.-->
+    <PackageReference Include="Microsoft.Web.Deployment" Version="4.0.5" />
+
+    <PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
-    <PackageReference Include="System.Configuration.Install" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
