--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -22,9 +22,7 @@
 
     <!--THIS IS AN ATROCITY TO MAKE A .NET FRAMEWORK LIB WORKING.-->
     <PackageReference Include="Microsoft.Web.Deployment" Version="4.0.5" />
-
-    <PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
