--- a/CodeCakeBuilder.NetFrameWorkRunner/CodeCakeBuilder.NetFrameWorkRunner.csproj
+++ b/CodeCakeBuilder.NetFrameWorkRunner/CodeCakeBuilder.NetFrameWorkRunner.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.Deployment" Version="4.0.5" />
   </ItemGroup>
 
 </Project>
