--- a/CK.LogViewer.WebApp/appsettings.json
+++ b/CK.LogViewer.WebApp/appsettings.json
@@ -22,5 +22,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LogViewerConfig": {
+    "PublicInstanceUri": "https://log.kuinox.io"
+  }
 }
