--- a/CK.LogViewer/CK.LogViewer.csproj
+++ b/CK.LogViewer/CK.LogViewer.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="14.0.0" />
+    <PackageReference Include="CK.Monitoring" Version="15.0.0-r01" />
   </ItemGroup>
 
 
