--- a/LogSampleGenerator/LogSampleGenerator.csproj
+++ b/LogSampleGenerator/LogSampleGenerator.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="14.0.0" />
-    <PackageReference Include="CK.Monitoring.Hosting" Version="14.0.0" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.0-r01" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="15.0.0-r01" />
   </ItemGroup>
   
 </Project>
