--- a/CK.LogViewer.WebApp/appsettings.json
+++ b/CK.LogViewer.WebApp/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Monitoring": {
+  "CK-Monitoring": {
     "HandleDotNetLogs": true,
     "RootLogPath": "Logs",
     "GrandOutput": { // Configuration by handler (e.g. TextFileConfiguration -> TextFile)
