--- a/CK.LogViewer/CK.LogViewer.csproj
+++ b/CK.LogViewer/CK.LogViewer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
