--- a/LogSampleGenerator/LogSampleGenerator.csproj
+++ b/LogSampleGenerator/LogSampleGenerator.csproj
@@ -1,8 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
