JIT/Debugger/VS repro

--- a/LogSampleGenerator/appsettings.json
+++ b/LogSampleGenerator/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Monitoring": {
+  "CK-Monitoring": {
     "HandleDotNetLogs": true,
     "RootLogPath": "Logs",
     "GrandOutput": { // Configuration by handler (e.g. TextFileConfiguration -> TextFile)
@@ -11,6 +11,9 @@
         "BinaryFile": {
           "UseGzipCompression": true,
           "Path": "CKMon"
+        },
+        "MQTT": {
+          "ConnectionString": "localhost:1883"
         }
       }
     }
