--- a/LogSampleGenerator/LogSampleGenerator.csproj
+++ b/LogSampleGenerator/LogSampleGenerator.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.0-r01" />
-    <PackageReference Include="CK.Monitoring.Hosting" Version="15.0.0-r01" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.0-r02" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="15.0.0-r02" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CK.Monitoring.MQTT\CK.Monitoring.MQTT.csproj" />
   </ItemGroup>
   
 </Project>
