--- a/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
+++ b/CK.LogViewer.WebApp/CK.LogViewer.WebApp.csproj
@@ -8,15 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.0-r01" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.0-r02" />
     <PackageReference Include="CK.Monitoring.Hosting" Version="15.0.0-r01" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CK-MQTT\CK.MQTT.Client\CK.MQTT.Client.csproj" />
     <ProjectReference Include="..\CK.LogViewer\CK.LogViewer.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot" />
   </ItemGroup>
