--- a/CK.LogViewer.WebApp/appsettings.json
+++ b/CK.LogViewer.WebApp/appsettings.json
@@ -25,5 +25,12 @@
   "AllowedHosts": "*",
   "LogViewerConfig": {
     "PublicInstanceUri": "https://log.kuinox.io"
+  },
+  "MQTT": {
+    "ConnectionString": "localhost:1883"
+  },
+  "LogPersistanceConfig": {
+    "LogFileFolder": "logFiles",
+    "StreamLogFolder":  "streamLogFiles"
   }
 }
