--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -27,6 +27,9 @@
     "webpack-dev-server": "^4.2.0"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "mqtt": "^4.3.4",
+    "process": "^0.11.10",
     "ts-toolbelt": "^9.6.0"
   }
 }
