--- a/CK.LogViewer.WebComponent/tsconfig.json
+++ b/CK.LogViewer.WebComponent/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "sourceMap": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "moduleResolution": "Node"
   }
 }
