--- a/CK.LogViewer/CK.LogViewer.csproj
+++ b/CK.LogViewer/CK.LogViewer.csproj
@@ -9,5 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CK.Monitoring" Version="15.0.0-r01" />
+    <PackageReference Include="System.Linq.Async" Version="5.1.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 </Project>
