Allow exporting as file.

--- a/CK.LogViewer.Desktop/CK.LogViewer.Desktop.csproj
+++ b/CK.LogViewer.Desktop/CK.LogViewer.Desktop.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <IsPackable>False</IsPackable>
@@ -14,8 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CK.Monitoring" Version="15.0.0-r06-01" />
     <PackageReference Include="CSemVer" Version="10.0.0" />
     <PackageReference Include="Octokit" Version="0.50.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CK.LogViewer\CK.LogViewer.csproj" />
   </ItemGroup>
 
 </Project>
