--- a/CK.TextLog2CKMon/CK.TextLog2CKMon.csproj
+++ b/CK.TextLog2CKMon/CK.TextLog2CKMon.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="15.0.0-r05" />
-    <PackageReference Include="CK.MQTT.Client" Version="0.10.3" />
   </ItemGroup>
 
 </Project>
