--- a/LogSampleGenerator/appsettings.json
+++ b/LogSampleGenerator/appsettings.json
@@ -13,7 +13,8 @@
           "Path": "CKMon"
         },
         "MQTT": {
-          "ConnectionString": "localhost:1883"
+          "ConnectionString": "localhost:1883",
+          "LaunchLogViewer":  true
         }
       }
     }
