Fixed logviewer summoning.

--- a/LogSampleGenerator/appsettings.json
+++ b/LogSampleGenerator/appsettings.json
@@ -4,7 +4,7 @@
     "RootLogPath": "Logs",
     "GrandOutput": { // Configuration by handler (e.g. TextFileConfiguration -> TextFile)
       "Handlers": {
-        "Console": true,
+        "Console": false,
         "TextFile": {
           "Path": "Text"
         },
@@ -13,7 +13,8 @@
           "Path": "CKMon"
         },
         "MQTT": {
-          "ConnectionString": "localhost:1883"
+          "ConnectionString": "localhost:1883",
+          "LaunchLogViewer":  true
         }
       }
     }
