--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -24,12 +24,11 @@
     "web-components-loader": "^0.1.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0"
+    "webpack-dev-server": "^4.2.0",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "mqtt": "^4.3.4",
-    "process": "^0.11.10",
-    "ts-toolbelt": "^9.6.0"
+    "mqtt": "^4.3.4"
   }
 }
