--- a/CK.LogViewer.Desktop/CK.LogViewer.Desktop.csproj
+++ b/CK.LogViewer.Desktop/CK.LogViewer.Desktop.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="15.0.0-r06-01" />
+    <PackageReference Include="CK.Monitoring" Version="15.0.0-r08" />
     <PackageReference Include="CSemVer" Version="10.0.0" />
     <PackageReference Include="Octokit" Version="0.50.0" />
   </ItemGroup>
