--- a/CK.LogViewer.WebComponent/package.json
+++ b/CK.LogViewer.WebComponent/package.json
@@ -10,25 +10,26 @@
     "clean": "exit 0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "@webcomponents/custom-elements": "^1.5.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-webpack-plugin": "^3.0.1",
-    "html-loader": "^2.1.2",
-    "replace-in-file-webpack-plugin": "^1.0.6",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
-    "web-components-loader": "^0.1.2",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0",
     "buffer": "^6.0.3",
-    "process": "^0.11.10"
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.16.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "html-loader": "^3.1.0",
+    "process": "^0.11.10",
+    "replace-in-file-webpack-plugin": "^1.0.6",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "web-components-loader": "^0.1.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "mqtt": "^4.3.4"
+    "mqtt": "^4.3.7",
+    "url": "^0.11.0"
   }
 }
